--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -151,7 +151,6 @@ The following packages are required and loaded by \jslp:
  \item \textsf{datetime2}
  \item \textsf{etoolbox}
  \item \textsf{ifthen}
- \item \textsf{xkeyval}
  \item \textsf{xparse}
 \end{itemize}
 \pagebreak
@@ -1440,7 +1439,7 @@ the \jslp\ style files. Thanks, Dominik.
 \begin{itemize}
 \item Forthcoming (v. 1.13):
 \begin{itemize}
-	\item jsmembertable: use legacy keyvals rather than \textsf{xkeyval}.
+	\item Use legacy keyvals rather than \textsf{xkeyval}.
 \end{itemize}
 \item 2020/12/08 (v. 1.12):
 	\begin{itemize}
