--- a/README
+++ b/README
@@ -68,7 +68,7 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.23 (forthcoming): - jsmembertable: use legacy keyvals rather than xkeyval.
+* V. 1.23 (forthcoming): - use legacy keyvals rather than xkeyval.
 
 * V. 1.12 (2020-12-08):  - Correctly parse staryear/endyear.
 
