--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -288,7 +288,7 @@
 	   \def\lecstarttime{\DTMtime{#1}}
 	},
 	% duration=<duration>
-	startdate.store = \lecduration,
+	duration.store = \lecduration,
 	% instructor=<instructor>
 	instructor.code = {
 	   \def\lecinstructor{#1}%
